# learning-projects

./: .gitignore  README.md
bitburner-javascript-projects/: README.md
bitburner-javascript-projects/servers/: nuker-reflection.md  scanner-reflection.md  servers-nuker.js  servers-scanner.js
c-projects/: .clang-format  CMakeLists.txt  README.md  STYLE.md
c-projects/games/: README.md
c-projects/games/terminal-based-games/: README.md
c-projects/games/terminal-based-games/hangman/: reflection.md
c-projects/math-operations/: README.md  main.c  math-operations.c  reflection.md
c-projects/utilities/: README.md  reflection.md  utils.c  utils.h
